<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sparks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="main_menu_points">
        <item>Main</item>
        <item>Export</item>
        <item>Import</item>
        <item>Recycle bin</item>
        <item>Search</item>
        <item>Appearance</item>
        <item>FAQ</item>
        <item>Create</item>
    </string-array>
    <string-array name="recycle_alert_dialog_points">
        <item>Restore</item>
        <item>Delete</item>
        <item>Inspect</item>
    </string-array>
    <string-array name="faq_title_points">
        <item>Button `Export`</item>
        <item>Button `Import`</item>
        <item>Button `Recycle bin`</item>
        <item>Button `Search`</item>
        <item>Button `Appearance`</item>
        <item>Button `FAQ`</item>
        <item>Button `Share`</item>
        <item>Button `Search`</item>
        <item>Button `Menu`</item>
        <item>Button `Create`</item>
    </string-array>
    <string-array name="faq_description_points">
        <item>Serves to form an archive file for subsequent transfer somewhere. Selecting a directory is done by long pressing on the target folder.</item>
        <item>Allows you to create a note based on the selected directory or archive. Selecting a directory is done by long pressing on the target folder.</item>
        <item>Displays previously deleted notes. You can restore notes (place them in the main list), or permanently delete them from the phone\'s memory.</item>
        <item>Opens a search window. \nYou can search for a note by title or by content. You can also specify the interval for creating a note.</item>
        <item>Opens the appearance settings window.\nYou can select the font and its size. \nYou can specify the desired application color from the suggested ones.</item>
        <item>Opens a window with frequently asked questions. Describes sections of the application\'s main menu.</item>
        <item>Share.\nAllows you to send the selected note as text to the selected application.</item>
        <item>Search.\nSummons an input field in the header. \nLooks for user input in the note header. Displays the results in a list.</item>
        <item>Screen menu.\nDisplays additional actions for application screen content.</item>
        <item>New.\nOpens the screen for creating a new note.</item>
    </string-array>

    <string name="main_menu_open">Menu</string>
    <string name="main_menu_close">Notes</string>
    <string name="actionbar_search_button">Find</string>
    <string name="actionbar_share_button">Share</string>
    <string name="actionbar_attach_button">Attach</string>
    <string name="actionbar_confirm_button">Confirm</string>
    <string name="actionbar_create_button">Create</string>
    <string name="actionbar_export_button">Export</string>
    <string name="actionbar_import_button">Import</string>
    <string name="actionbar_delete_button">Delete</string>
    <string name="actionbar_back_button">Back</string>
    <string name="actionbar_decline_button">Decline</string>
    <string name="actionbar_restore_button">Restore</string>
    <string name="empty">empty place</string>
    <string name="search_place_holder">Line part</string>
    <string name="search_category_by_title">by title</string>
    <string name="search_category_by_content">by content</string>
    <string name="search_date_gap_noticer">Specify interval</string>
    <string name="search_date_begin">Begin</string>
    <string name="search_date_end">End</string>
    <string name="import_zip_location_title">Location</string>
    <string name="import_path_sample">/mnt/sdcard/Download</string>
    <string name="export_zip_location_title">Location</string>
    <string name="export_zip_name_title">Zip-name</string>
    <string name="export_zip_name_placeholder">Archive</string>
    <string name="export_path_sample">/mnt/sdcard/</string>
    <string name="create_content_placeholder">Some points</string>
    <string name="create_title_placeholder">Some title</string>
    <string name="create_date_sample">2022-01-01 07:59</string>
    <string name="search_results">Search results</string>

    <!-- Shared prefs section -->

    <string name="interface_settings">Common settings</string>
    <string name="test_preference_node_description">Location for saving/getting storage of notes</string>
    <string name="test_preference_node_title">Import/Export by default path</string>

</resources>