<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_place_holder"
        android:textSize="@dimen/font_size_title" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radio_group_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_category_by_title"
            android:textSize="@dimen/font_size_title" />

        <RadioButton
            android:id="@+id/radio_by_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_category_by_content"
            android:textSize="@dimen/font_size_title" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox_notice_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/search_date_gap_noticer"
        android:textSize="@dimen/font_size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/search_begin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_date_begin"
            android:textSize="@dimen/font_size_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/begin_date_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:inputType="date"
                android:textSize="@dimen/font_size_title" />

            <ImageButton
                android:id="@+id/pointer_begin_date_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:scaleType="centerInside"
                android:src="@drawable/search_calendar_item" />

        </LinearLayout>

        <TextView
            android:id="@+id/search_end_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_date_end"
            android:textSize="@dimen/font_size_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" >

            <EditText
                android:id="@+id/finish_date_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:inputType="date"
                android:textSize="@dimen/font_size_title" />

            <ImageButton
                android:id="@+id/pointer_finish_date_search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:scaleType="centerInside"
                android:src="@drawable/search_calendar_item" />

        </LinearLayout>
    </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/actionbar_search_button"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_button" />

</LinearLayout>